WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192206
Inform clients when editable image attachment backing data changes
https://bugs.webkit.org/show_bug.cgi?id=192206
Summary
Inform clients when editable image attachment backing data changes
Tim Horton
Reported
2018-11-29 18:11:02 PST
Inform clients when editable image attachment backing data changes
Attachments
Patch
(21.20 KB, patch)
2018-11-29 18:11 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(21.46 KB, patch)
2018-11-29 22:03 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-11-29 18:11:21 PST
Created
attachment 356102
[details]
Patch
Tim Horton
Comment 2
2018-11-29 18:11:23 PST
<
rdar://problem/46350277
>
EWS Watchlist
Comment 3
2018-11-29 18:13:53 PST
Attachment 356102
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/ios/PencilKitTestSPI.h:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
Wenson Hsieh
Comment 4
2018-11-29 18:24:58 PST
Comment on
attachment 356102
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=356102&action=review
> Source/WebKit/UIProcess/API/Cocoa/APIAttachmentCocoa.mm:67 > + m_webPage->didInvalidateDataForAttachment(*this);
Should we also notify the delegate when Attachment::setFileWrapperGenerator invalidates the file wrapper?
Tim Horton
Comment 5
2018-11-29 22:03:43 PST
Created
attachment 356133
[details]
Patch
EWS Watchlist
Comment 6
2018-11-29 22:06:46 PST
Attachment 356133
[details]
did not pass style-queue: ERROR: Tools/TestWebKitAPI/ios/PencilKitTestSPI.h:35: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 14 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 7
2018-11-29 22:31:13 PST
Comment on
attachment 356133
[details]
Patch Clearing flags on attachment: 356133 Committed
r238726
: <
https://trac.webkit.org/changeset/238726
>
WebKit Commit Bot
Comment 8
2018-11-29 22:31:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug